--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
   <version>0.0.1-SNAPSHOT</version>
   
      <properties>
+	<sonar.organization>projectorf</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
